@@ -19,15 +19,11 @@ import com.soprasteria.g4it.backend.apiparameterai.repository.InAiParameterRepos
 import com.soprasteria.g4it.backend.apirecomandation.repository.OutAiRecoRepository;
 import com.soprasteria.g4it.backend.apireferential.business.ReferentialService;
 import com.soprasteria.g4it.backend.client.gen.connector.apiecomindv2.dto.OutputEstimation;
-import com.soprasteria.g4it.backend.client.gen.connector.apiecomindv2.dto.Recommendation;
 import com.soprasteria.g4it.backend.common.filesystem.business.local.CsvFileService;
 import com.soprasteria.g4it.backend.common.model.Context;
 import com.soprasteria.g4it.backend.common.task.modeldb.Task;
 import com.soprasteria.g4it.backend.common.task.repository.TaskRepository;
-import com.soprasteria.g4it.backend.common.utils.StringUtils;
 import com.soprasteria.g4it.backend.exception.G4itRestException;
-import com.soprasteria.g4it.backend.server.gen.api.dto.AIConfigurationRest;
-import com.soprasteria.g4it.backend.server.gen.api.dto.CriterionRest;
 import org.apache.commons.csv.CSVPrinter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -43,7 +39,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -102,123 +97,137 @@ class EvaluateAiServiceTest {
     }
 
     private InAiParameter mockAiParameter() {
-        InAiParameter param = mock(InAiParameter.class);
-        when(param.getFramework()).thenReturn("llamacpp");
-        when(param.getModelName()).thenReturn("llama3");
-        when(param.getQuantization()).thenReturn("q2k");
-        when(param.getNbParameters()).thenReturn(String.valueOf(8));
-        when(param.getTotalGeneratedTokens()).thenReturn(BigInteger.valueOf(100));
-        when(param.getIsInference()).thenReturn(true);
-        when(param.getType()).thenReturn("MODEL");
+        InAiParameter param = new InAiParameter();
+        param.setFramework("llamacpp");
+        param.setModelName("llama3");
+        param.setQuantization("q2k");
+        param.setNbParameters("8");
+        param.setTotalGeneratedTokens(BigInteger.valueOf(100));
+        param.setIsInference(true);
+        param.setType("MODEL");
         return param;
     }
 
+
     private InDatacenter mockDatacenter(String name, String location) {
-        InDatacenter dc = mock(InDatacenter.class);
-        when(dc.getName()).thenReturn(name);
-        when(dc.getLocation()).thenReturn(location);
+        InDatacenter dc = new InDatacenter();
+        dc.setName(name);
+        dc.setLocation(location);
         return dc;
     }
 
+
     @Test
     void testDoEvaluateAiSuccess() throws Exception {
-        when(context.getOrganization()).thenReturn("org");
-        when(context.getDigitalServiceUid()).thenReturn("uid");
-        when(context.getDigitalServiceName()).thenReturn("Digital Service 1");
-        when(context.log()).thenReturn("context-log");
-        when(context.isHasVirtualEquipments()).thenReturn(true);
-        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
-        when(context.getDigitalServiceVersionName()).thenReturn("Digital Service Version 1");
 
-        when(task.getId()).thenReturn(99L);
+        // -------- Context --------
+        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
+        when(context.getDigitalServiceName()).thenReturn("DS");
+        when(context.getOrganization()).thenReturn("ORG");
+        when(context.isHasVirtualEquipments()).thenReturn(true);
+        when(task.getId()).thenReturn(1L);
         when(task.getCriteria()).thenReturn(List.of("CLIMATE_CHANGE"));
 
-        InAiParameter aiParam = mockAiParameter();
-        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(aiParam);
-        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid")).thenReturn(mock(InAiInfrastructure.class));
+        // -------- AI PARAMETERS --------
+        InAiParameter aiParam = new InAiParameter();
+        aiParam.setFramework("llamacpp");
+        aiParam.setModelName("llama3");
+        aiParam.setQuantization("q4");
+        aiParam.setNbParameters("8");
+        aiParam.setTotalGeneratedTokens(BigInteger.valueOf(100));
+        aiParam.setNumberUserYear(BigInteger.ONE);
+        aiParam.setAverageNumberRequest(BigInteger.ONE);
+        aiParam.setAverageNumberToken(BigInteger.ONE);
+        aiParam.setIsInference(true);
+        aiParam.setIsFinetuning(false);
 
-        InDatacenter datacenter = mockDatacenter("DC1", "FR");
-        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(List.of(datacenter));
+        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(aiParam);
 
-        InPhysicalEquipment physicalEquipment = mock(InPhysicalEquipment.class);
-        when(physicalEquipment.getDatacenterName()).thenReturn("DC1");
-        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>(List.of(physicalEquipment)));
+        // -------- INFRA --------
+        InAiInfrastructure infra = new InAiInfrastructure();
+        infra.setNbGpu(2L);
+        infra.setGpuMemory(16L);
+        infra.setInfrastructureType("server-28");
 
-        InVirtualEquipment virtualEquipment = mock(InVirtualEquipment.class);
-        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>(List.of(virtualEquipment)));
-        when(virtualEquipment.getLocation()).thenReturn("FR");
-        when(virtualEquipment.getQuantity()).thenReturn(1.0);
-        when(virtualEquipment.getDurationHour()).thenReturn(10.0);
-        when(virtualEquipment.getWorkload()).thenReturn(0.5);
+        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(infra);
 
-        OutputEstimation estimation = new OutputEstimation();
-        estimation.setElectricityConsumption(BigDecimal.valueOf(100f));
-        estimation.setRuntime(BigDecimal.valueOf(200f));
-        estimation.setRecommendations(List.of(new Recommendation()));
+        // -------- DATACENTER --------
+        InDatacenter dc = new InDatacenter();
+        dc.setName("DC1");
+        dc.setLocation("FR");
+        dc.setPue(1.5);
 
-        when(aiConfigurationMapper.toAIModelConfigRest(any())).thenReturn(List.of(mock(AIConfigurationRest.class)));
-        when(aiService.runEstimation(any())).thenReturn(estimation);
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(dc));
 
-        CriterionRest criterionRest = new CriterionRest("CLIMATE_CHANGE");
-        criterionRest.setUnit("kg CO2 eq");
-        when(referentialService.getLifecycleSteps()).thenReturn(List.of("use"));
-        when(referentialService.getActiveCriteria(task.getCriteria().stream()
-                .map(StringUtils::kebabToSnakeCase).toList())).thenReturn(List.of(criterionRest));
-        when(referentialService.getElectricityMixQuartiles()).thenReturn(Map.of());
-        when(referentialService.getHypotheses(any())).thenReturn(List.of());
-        when(referentialService.getSipValueMap(any())).thenReturn(Map.of("CLIMATE_CHANGE", 2.0));
+        // -------- PHYSICAL EQUIPMENT --------
+        InPhysicalEquipment physical = new InPhysicalEquipment();
+        physical.setDatacenterName("DC1");
+        physical.setCpuCoreNumber(8.0);
+        physical.setSizeMemoryGb(64.0);
 
-        CSVPrinter printer = mock(CSVPrinter.class);
-        when(csvFileService.getPrinter(any(), eq(exportDirectory))).thenReturn(printer);
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(physical)));
 
-        ImpactEquipementPhysique impact = mock(ImpactEquipementPhysique.class);
-        when(impact.getStatutIndicateur()).thenReturn("OK");
-        when(impact.getTrace()).thenReturn("trace");
-        when(impact.getCritere()).thenReturn("CLIMATE_CHANGE");
-        when(impact.getQuantite()).thenReturn(1.0);
-        when(impact.getImpactUnitaire()).thenReturn(2.0);
-        when(impact.getConsoElecMoyenne()).thenReturn(10.0);
-        when(impact.getDureeDeVie()).thenReturn(5.0);
 
-        when(evaluateNumEcoEvalService.calculatePhysicalEquipment(any(), any(), any(), any(), any(), any()))
-                .thenReturn(List.of(impact));
-        when(aggregationToOutput.keyPhysicalEquipment(any(), any(), any(), any(), anyBoolean()))
-                .thenReturn(List.of("PHYSICAL_KEY"));
-        ImpactEquipementVirtuel vImpact = mock(ImpactEquipementVirtuel.class);
-        when(vImpact.getStatutIndicateur()).thenReturn("OK");
-        when(vImpact.getTrace()).thenReturn("trace");
-        when(vImpact.getCritere()).thenReturn("CLIMATE_CHANGE");
-        when(vImpact.getImpactUnitaire()).thenReturn(2.0);
-        when(vImpact.getConsoElecMoyenne()).thenReturn(1.0);
+        // -------- VIRTUAL EQUIPMENT --------
+        InVirtualEquipment virtual = new InVirtualEquipment();
+        virtual.setLocation("FR");
+        virtual.setWorkload(0.5);
 
-        when(evaluateNumEcoEvalService.calculateVirtualEquipment(any(), any(), anyInt(), any(), any()))
-                .thenReturn(List.of(vImpact));
-        when(aggregationToOutput.keyVirtualEquipment(any(), any(), any(), any(), any()))
-                .thenReturn(List.of("VIRTUAL_KEY"));
+        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(virtual)));
+
+
+        // -------- NumEcoEval mocks --------
+        ImpactEquipementPhysique physicalImpact = mock(ImpactEquipementPhysique.class);
+        when(physicalImpact.getStatutIndicateur()).thenReturn("OK");
+        when(physicalImpact.getImpactUnitaire()).thenReturn(10.0);
+        when(physicalImpact.getConsoElecMoyenne()).thenReturn(5.0);
+
+        when(evaluateNumEcoEvalService.calculatePhysicalEquipment(
+                any(), any(), any(), any(), any(), any()))
+                .thenReturn(List.of(physicalImpact));
+
+        ImpactEquipementVirtuel virtualImpact = mock(ImpactEquipementVirtuel.class);
+        when(virtualImpact.getImpactUnitaire()).thenReturn(2.0);
+        when(virtualImpact.getConsoElecMoyenne()).thenReturn(1.0);
+
+        when(evaluateNumEcoEvalService.calculateVirtualEquipment(
+                any(), any(), anyInt(), any(), any(), any(), any()))
+                .thenReturn(List.of(virtualImpact));
+
         when(evaluateNumEcoEvalService.getTotalVcpuCoreNumber(any())).thenReturn(4.0);
         when(evaluateNumEcoEvalService.getTotalDiskSize(any())).thenReturn(100.0);
 
-        when(saveService.saveOutPhysicalEquipments(any(), anyLong(), any())).thenReturn(1);
-        when(saveService.saveOutVirtualEquipments(any(), anyLong(), any())).thenReturn(1);
+        // -------- CSV mocks --------
+        when(csvFileService.getPrinter(any(), any()))
+                .thenReturn(mock(CSVPrinter.class));
 
+        when(aggregationToOutput.keyPhysicalEquipment(any(), any(), any(), any(), anyBoolean()))
+                .thenReturn(List.of("PHYSICAL"));
+
+        when(aggregationToOutput.keyVirtualEquipment(any(), any(), any(), any(), any()))
+                .thenReturn(List.of("VIRTUAL"));
+
+        OutputEstimation estimation = new OutputEstimation();
+        estimation.setElectricityConsumption(BigDecimal.valueOf(100));
+        estimation.setRuntime(BigDecimal.valueOf(200));
+        estimation.setRecommendations(List.of());
+
+        when(aiService.runEstimation(any()))
+                .thenReturn(estimation);
+
+        // -------- Execute --------
         aiEvaluationService.doEvaluateAi(context, task, exportDirectory);
 
+        // -------- Verify --------
         verify(taskRepository).save(task);
         verify(outAiRecoRepository).save(any());
-        verify(csvFileService, atLeastOnce()).getPrinter(any(), eq(exportDirectory));
-        verify(inPhysicalEquipmentRepository).save(any());
-        verify(inVirtualEquipmentRepository).save(any());
     }
 
-    @Test
-    void testDoEvaluateAiMissingAiParamsThrows() {
-        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
-        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(null);
-
-        G4itRestException ex = assertThrows(G4itRestException.class, () ->
-                aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
-        assertTrue(ex.getMessage().contains("the ai parameter doesn't exist"));
-    }
 
     @Test
     void testDoEvaluateAiMissingAiInfraThrows() {
@@ -236,7 +245,7 @@ class EvaluateAiServiceTest {
         when(context.getDigitalServiceVersionUid()).thenReturn("uid");
         when(inAIParameterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiParameter());
         when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiInfrastructure());
-        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(Collections.emptyList());
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>());
 
         G4itRestException ex = assertThrows(G4itRestException.class, () ->
                 aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
@@ -249,8 +258,8 @@ class EvaluateAiServiceTest {
         when(context.getDigitalServiceVersionUid()).thenReturn("uid");
         when(inAIParameterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiParameter());
         when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiInfrastructure());
-        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(List.of(inDatacenter));
-        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(Collections.emptyList());
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>(List.of(inDatacenter)));
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>());
 
         G4itRestException ex = assertThrows(G4itRestException.class, () ->
                 aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
@@ -264,13 +273,186 @@ class EvaluateAiServiceTest {
         when(context.getDigitalServiceVersionUid()).thenReturn("uid");
         when(inAIParameterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiParameter());
         when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new InAiInfrastructure());
-        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(List.of(inDatacenter));
-        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(List.of(inPhysicalEquipment));
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>(List.of(inDatacenter)));
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(new ArrayList<>(List.of(inPhysicalEquipment)));
         when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid")).thenReturn(Collections.emptyList());
 
         G4itRestException ex = assertThrows(G4itRestException.class, () ->
                 aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
         assertTrue(ex.getMessage().contains("the virtual equipements doesn't exist"));
     }
+
+    @Test
+    void testDoEvaluateAiWithoutVirtualEquipments() throws Exception {
+        when(context.isHasVirtualEquipments()).thenReturn(false);
+        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
+        when(context.getDigitalServiceName()).thenReturn("DS");
+        when(context.log()).thenReturn("log");
+
+        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mockAiParameter());
+
+        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mock(InAiInfrastructure.class));
+
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mockDatacenter("DC1", "FR")));
+
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(mock(InPhysicalEquipment.class))));
+
+        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>()); // empty
+
+        assertThrows(G4itRestException.class, () ->
+                aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
+    }
+
+    @Test
+    void testVirtualEquipmentCalculationReturnsEmptyList() throws Exception {
+
+        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
+        when(context.isHasVirtualEquipments()).thenReturn(true);
+
+        // --- Mock AI parameter
+        InAiParameter param = new InAiParameter();
+        param.setFramework("llama");
+        param.setModelName("model");
+        param.setQuantization("q4");
+        param.setNbParameters("7");
+        param.setTotalGeneratedTokens(BigInteger.valueOf(100));
+        param.setIsInference(true);
+
+        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(param);
+
+        // --- Mock infra
+        InAiInfrastructure infra = new InAiInfrastructure();
+        infra.setGpuMemory(16L);
+        infra.setNbGpu(2L);
+
+        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(infra);
+
+        // --- Mock datacenter
+        InDatacenter dc = new InDatacenter();
+        dc.setName("dc1");
+        dc.setLocation("FR");
+
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(dc)));
+
+        // --- Mock physical equipment
+        InPhysicalEquipment pe = new InPhysicalEquipment();
+        pe.setDatacenterName("dc1");
+        pe.setCpuCoreNumber(8.0);
+        pe.setSizeMemoryGb(64.0);
+
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(pe)));
+
+        // --- Mock virtual equipment
+        InVirtualEquipment ve = new InVirtualEquipment();
+        ve.setLocation("FR");
+        ve.setWorkload(0.5);
+
+        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(new ArrayList<>(List.of(ve)));
+
+
+        OutputEstimation estimation = new OutputEstimation();
+        estimation.setElectricityConsumption(BigDecimal.valueOf(100));
+        estimation.setRuntime(BigDecimal.valueOf(10));
+        estimation.setRecommendations(List.of());
+
+        when(aiService.runEstimation(any())).thenReturn(estimation);
+
+        // Mock evaluation engine
+        when(evaluateNumEcoEvalService.getTotalVcpuCoreNumber(any())).thenReturn(4.0);
+        when(evaluateNumEcoEvalService.getTotalDiskSize(any())).thenReturn(100.0);
+
+        when(evaluateNumEcoEvalService.calculatePhysicalEquipment(any(), any(), any(), any(), any(), any()))
+                .thenReturn(List.of(mock(ImpactEquipementPhysique.class)));
+
+        when(evaluateNumEcoEvalService.calculateVirtualEquipment(any(), any(), anyInt(), any(), any(), any(), any()))
+                .thenReturn(List.of(mock(ImpactEquipementVirtuel.class)));
+
+        when(csvFileService.getPrinter(any(), any())).thenReturn(mock(CSVPrinter.class));
+
+        // ACT
+        aiEvaluationService.doEvaluateAi(context, task, Path.of("tmp"));
+
+        // ASSERT
+        verify(outAiRecoRepository).save(any());
+    }
+
+
+    @Test
+    void testEvaluateEcomindReturnsNull() {
+        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
+
+        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mockAiParameter());
+
+        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mock(InAiInfrastructure.class));
+
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mockDatacenter("DC1", "FR")));
+
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mock(InPhysicalEquipment.class)));
+
+        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mock(InVirtualEquipment.class)));
+
+        // 👇 simulate Ecomind failure
+        when(aiService.runEstimation(any())).thenReturn(null);
+
+        assertThrows(NullPointerException.class,
+                () -> aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
+    }
+
+    @Test
+    void testAggregationOverflowThrowsException() throws Exception {
+        setupMinimalHappyPath();
+
+        when(aggregationToOutput.keyVirtualEquipment(any(), any(), any(), any(), any()))
+                .thenReturn(List.of("X"));
+
+        // Force large aggregation map
+        for (int i = 0; i < 600_000; i++) {
+            evaluateNumEcoEvalService.calculateVirtualEquipment(
+                    any(), any(), anyInt(), any(), any(), any(), any());
+        }
+
+        assertThrows(RuntimeException.class,
+                () -> aiEvaluationService.doEvaluateAi(context, task, exportDirectory));
+    }
+
+    private void setupMinimalHappyPath() {
+        when(context.isHasVirtualEquipments()).thenReturn(true);
+        when(context.getDigitalServiceVersionUid()).thenReturn("uid");
+        when(context.getDigitalServiceName()).thenReturn("DS");
+
+        when(inAIParameterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mockAiParameter());
+
+        when(inAiInfrastructureRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(mock(InAiInfrastructure.class));
+
+        when(inDatacenterRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mockDatacenter("DC1", "FR")));
+
+        when(inPhysicalEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mock(InPhysicalEquipment.class)));
+
+        when(inVirtualEquipmentRepository.findByDigitalServiceVersionUid("uid"))
+                .thenReturn(List.of(mock(InVirtualEquipment.class)));
+
+        when(evaluateNumEcoEvalService.getTotalVcpuCoreNumber(any())).thenReturn(4.0);
+        when(evaluateNumEcoEvalService.getTotalDiskSize(any())).thenReturn(100.0);
+    }
+
 
 }
